--- a/styles/styles.css
+++ b/styles/styles.css
@@ -317,11 +317,11 @@ section {
 .about-stats .progress-bars .progress-bar .progress-con .progress .js {
   width: 75%;
 }
-.about-stats .progress-bars .progress-bar .progress-con .progress .react {
-  width: 60%;
-}
-.about-stats .progress-bars .progress-bar .progress-con .progress .node {
+.about-stats .progress-bars .progress-bar .progress-con .progress .qt {
   width: 87%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .flt {
+  width: 75%;
 }
 .about-stats .progress-bars .progress-bar .progress-con .progress .python {
   width: 70%;
